# Trackchange

./: .gitignore  2026-03-31_문서 업로드 조사.md  CLAUDE.md  README.md  agent.md  mkdocs.yml  pyproject.toml  requirements.txt  문서 나누기 단계별.md  문서 분할 파이프라인 사용 가이드.md  변경대비표 skill.md  변경대비표 자동화 시스템 설계 문서.md
.github/workflows/: deploy-docs.yml
.playwright-mcp/: page-2026-04-01T00-43-12-075Z.yml  page-2026-04-01T00-43-25-076Z.yml  page-2026-04-01T05-35-28-073Z.yml
prompts/: change_row_schema.json  change_row_system.txt  validation_eval_schema.json  validation_eval_system.txt
scripts/: cli.py  detect_language.py  diff_headers.py  diff_media.py  diff_tables.py  diff_text.py  export_docx.py  extract_blocks.py  extract_pages.py  generate_rows.py  match_sections.py  run_diff.py  run_export.py  run_rows.py  run_split.py  run_validate.py  schema.py  split_sections.py  validate_table.py
