[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trackchange"
version = "0.2.0"
description = "DOCX Comparison Table of Change generator for clinical trial protocols"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "python-docx>=1.1.0",
    "lxml>=4.9.0",
    "diff-match-patch>=20230430",
    "docx2pdf>=0.1.0",
    "PyMuPDF>=1.23.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
trackchange = "scripts.cli:main"

[tool.setuptools.packages.find]
include = ["scripts*", "prompts*"]

[tool.setuptools.package-data]
prompts = ["*.txt", "*.json"]
